@@ -1,3 +1,7 @@
+SimpleComplex/Config 1.x, 2017-07-01
+------------------------------------
+- .ini based export from sources, as JSON to file.
+
 SimpleComplex/Config 1.x, 2017-06-30
 ------------------------------------
 - .ini-based custom file extensions find filter.
